--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
               all about solving problems and communicating with other
               professionals about optimal solutions. The freedom of not having a
               concrete solution to anything, because it all depends on the
-              situation is what makes me intrigued and content with what I do.
+              situation, is what makes me intrigued and content with what I do.
             </p>
             <h4>My favorites include:</h4>
             <ul>
