custom animation added

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         <div class="lottie-animation">
           <lottie-player
-            src="https://assets7.lottiefiles.com/packages/lf20_gjRCmXyruI.json"
+            src="./img/paper-plane.json"
             background="transparent"
             speed="1.5"
             style="width: 350px; height: 350px"
