Changed some text

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
             <p class="blackbox">
               Before writing software I was a carpenter. My dream of building my
               own house led me to an apprenticeship where I learned almost
-              everything necessary to do just that. Like software, carpentry is
+              everything necessary to do just that. Like carpentry, software is
               all about solving problems and communicating with other
               professionals about optimal solutions. The freedom of not having a
               concrete solution to anything, because it all depends on the
