--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <h2>Explore my work</h2>
         <article>
           <div class="text">
-            <h4>Latest</h4>
+            <h4>Latest build</h4>
             <h3>Waggle</h3>
             <p class="blackbox">
               Waggle is a mobile view matching app to find playmates for your
@@ -110,7 +110,7 @@
 
         <article class="reverse">
           <div class="text">
-            <h4>Refactor</h4>
+            <h4>Refactored</h4>
             <h3>Climbing Crags</h3>
             <p class="blackbox">
               Climbing crags is a simple social platform that works on desktop
