--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
               <li>Hiking</li>
               <li>Yoga</li>
               <li>Meditation</li>
-              <li>Food</li>
+              <li>Cooking</li>
             </ul>
           </div>
           <img src="./img/20200819_185025.jpg" alt="Picture of my house." />
