--- a/about.html
+++ b/about.html
@@ -78,7 +78,10 @@
               <li>Cooking</li>
             </ul>
           </div>
-          <img src="./img/20200819_185025.jpg" alt="Picture of my house." />
+          <img
+            src="https://res.cloudinary.com/swaggles21/image/upload/q_60/v1662455205/20200819_185025_thnyct.jpg"
+            alt="Picture of my house."
+          />
         </article>
       </section>
     </div>
