more img optimizations

--- a/about.html
+++ b/about.html
@@ -78,10 +78,7 @@
               <li>Cooking</li>
             </ul>
           </div>
-          <img
-            src="https://res.cloudinary.com/swaggles21/image/upload/q_60/v1662455205/20200819_185025_thnyct.jpg"
-            alt="Picture of my house."
-          />
+          <img src="./img/myHouse.png" alt="Picture of my house." />
         </article>
       </section>
     </div>
