Added app walkthrough

--- a/index.html
+++ b/index.html
@@ -96,7 +96,12 @@
               Once you match with another user you can chat with them and
               organize a meet or maybe attend an event? Events are also shown by
               distance and you can create your own. Our algorithm finds dogs
-              similar in size, age, and energy level.
+              similar in size, age, and energy level. See app walkthrough
+              <a
+                href="https://www.youtube.com/watch?v=nn3c55yM2jQ"
+                target="_blank"
+                >here</a
+              >.
             </p>
             <h4>Technologies used include:</h4>
             <ul>
