--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
               Once you match with another user you can chat with them and
               organize a meet or maybe attend an event? Events are also shown by
               distance and you can create your own. Our algorithm finds dogs
-              similar in size, age, and energy level. See app walkthrough
+              similar in size, age, and energy level. <br />
+              See app walkthrough
               <a
                 href="https://www.youtube.com/watch?v=nn3c55yM2jQ"
                 target="_blank"
